# de-bootcamp-with-zach

./: README.md  pyproject.toml
Homework_1/: actors_ddl.sql  actors_scd.sql  actors_scd_history_backfill.sql  actors_scd_history_incremental.sql  cumulative_table_query_actors.sql  insert_into_actors.py
