[tool.poetry]
name = "de-bootcamp-zach"
version = "0.1.0"
description = "DE bootcamp homelab"
authors = ["SB"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
trino = "^0.329.0"
polars = "1.14.0"
psycopg2-binary = "^2.9.10"
sqlfluff = "^3.2.5"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.sqlfluff.core]
dialect = "postgres"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl"
rules = "layout"

[sqlfluff.indentation]
tab_space_size = 4